fixed overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,12 +5,21 @@
     padding: 0px;
     margin: 0px;
 }
+/* html {
+    width: 100%;
+    height: 100%;
+}
+body {
+    width: 100%;
+    height: 100%;
+} */
 #container {
     width: 100vw;
     height: 100vh;
     display: grid;
     grid-template-columns: 100vw;
     grid-template-rows: 8vh 6vh 78vh 8vh;
+    overflow: hidden;
 }
 /* This part is css about the header section on main page */
 #header {
